--- a/index.html
+++ b/index.html
@@ -2,25 +2,47 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booki</title>
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <script src="https://kit.fontawesome.com/b02e4d4ea3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <img src="C:\Users\kallv\Documents\ProjetBookie\Asset\logo\Booki.png" />
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Hébergements</a>
+                </li>
+                <li>
+                    <a href="#">Activités</a>
+                </li>
+            </ul>
+        </nav>
+        </header>
         <main>
+            <div class="entête">
+                <h2>Trouver votre hébergement pour des vacances de rêve</h2>
+                <p>En plein centre ville ou en pleine nature</p>
+            </div>
+            <div class="formulaire">
+                <form action="#" method="get" class="formulaire-composer">
+                    <i class="fas fa-map-marker-alt search_icon"></i>
+                    <div class="barre-de-recherche">
+                        <input type="search" placeholder="Marseille, France" class="mots-rechercher">
+                    </div>
+                    <input type="button" value="Recherche" class="bouton">
+                </form>
+            </div>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-
+                    <div class="hebergements-title">
+                <h2 class="section-title">Hébergement à Marseille</h2>
+                    </div>
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
