presque fini 1ere section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,34 @@
                     <input type="button" value="Recherche" class="bouton">
                 </form>
             </div>
+            <div class="box-filtres">
+                <div>
+                    <span class="mot-filtre"> Filtre</span>
+                </div>
+                <div class="modele-de-filtre">
+                    <div class="filtre-and-icone">
+                        <a href="#"><i class="fas fa-money-bill-wave filter_icon"></i><span class="mot-span">Economique</span></a>
+                    </div>
+                    <div class="filtre-and-icone">
+                        <a href="#"><i class="fas fa-child filter_icon"></i><span class="mot-span">Familial</span></a>
+                    </div>
+                    <div class="filtre-and-icone">
+                        <a href="#"><i class="fas fa-heart filter_icon"></i><span class="mot-span">Romantique</span></a>
+                    </div>
+                    <div class="filtre-and-icone">
+                        <a href="#"><i class="fas fa-dog filter_icon"></i><span class="mot-span">Nos pépites</span></a>
+                    </div>
+                </div>
+                <div class="info-logements">
+                    <div>
+                        <i class="fas fa-info info_icon"></i>
+                    </div>
+                    <div>
+                    <span class="info">Plus de 500 logements sont disponible dans cette ville</span>
+                    </div>
+                </div>
+                </div>
+            </div>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
                     <div class="hebergements-title">
