--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title></title>
+    <link rel="stylesheet" type="text/css" href="./css/normalize.css">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/b02e4d4ea3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +27,7 @@
         </header>
         <main>
             <div class="entête">
-                <h2>Trouver votre hébergement pour des vacances de rêve</h2>
+                <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
                 <p>En plein centre ville ou en pleine nature</p>
             </div>
             <div class="formulaire">
@@ -35,7 +36,7 @@
                     <div class="barre-de-recherche">
                         <input type="search" placeholder="Marseille, France" class="mots-rechercher">
                     </div>
-                    <input type="button" value="Recherche" class="bouton">
+                    <input type="button" value="Rechercher" class="bouton">
                 </form>
             </div>
             <div class="box-filtres">
@@ -56,12 +57,13 @@
                         <a href="#"><i class="fas fa-dog filter_icon"></i><span class="mot-span">Nos pépites</span></a>
                     </div>
                 </div>
+            </div>
                 <div class="info-logements">
                     <div>
                         <i class="fas fa-info info_icon"></i>
                     </div>
                     <div>
-                    <span class="info">Plus de 500 logements sont disponible dans cette ville</span>
+                    <p class="info">Plus de 500 logements sont disponibles dans cette ville</p>
                     </div>
                 </div>
                 </div>
