--- a/index.html
+++ b/index.html
@@ -68,69 +68,120 @@
                 </div>
                 </div>
             </div>
-            <div class="hebergements-and-populaires">
-                <section class="hebergements">
-                    <div class="hebergements-title">
+
+            <div id="hebergements-and-populaires" class="flex">
+
+                <section id="bloc-hebergements" class="backgrey flex">
                 <h2 class="section-title">Hébergement à Marseille</h2>
-                    </div>
+
+                <div class="contenu-bloc-hotel flex">
+
+                    <a class="hotel-card flex">
+                        <img class="hotel-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                        <div class="hotel-card-description flex">
+
+                            <h3 class="hotel-titre-card">Hôtel du Port</h3>
+                            <p class="hotel-prix">Nuit à partir de 52<span class="euro">€</span></p>
+                            <div class="card-notes">
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star greystar"></i>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a class="hotel-card flex">
+                        <img class="hotel-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                        <div class="hotel-card-description flex">
+
+                            <h3 class="hotel-titre-card">Hôtel chez Amina</h3>
+                            <p class="hotel-prix">Nuit à partir de 96<span class="euro">€</span></p>
+                            <div class="card-notes">
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star greystar"></i>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a class="hotel-card flex">
+                        <img class="hotel-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                        <div class="hotel-card-description flex">
+
+                            <h3 class="hotel-titre-card">Hôtel les mouettes</h3>
+                            <p class="hotel-prix">Nuit à partir de 76<span class="euro">€</span></p>
+                            <div class="card-notes">
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star greystar"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="more">
+                        <span><strong>Afficher plus</strong></span>
+                    </a>
+                </div>
                 </section>
-                <section class="populaires">
-                    <div class="populaires-title">
-                        <h2 class="section-title">Les plus populaires</h2>
-                        <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
+
+
+                <section id="bloc-populaires" class="backgrey flex">
+                    <div class="bloc-populaires-title flex">
+                        <h2 class="populaire-title">Les plus populaires</h2>
+                        <i class="fas fa-chart-line chart-line-black"></i>
                     </div>
-                    <div class="populaires-cards">
-                        <article class="card">
-                            <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                            <div class="card-content">
-                                <div class="card-txt">
-                                    <h3 class="card-title">Hôtel Le soleil du matin</h3>
-                                    <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
-                                </div>
-                                <div class="card-rating">
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star neutralStar" aria-hidden="true"></i>
-                                    <span class="sr-only">Note de 4 sur 5</span>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="card">
-                            <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                            <div class="card-content">
-                                <div class="card-txt">
-                                    <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
-                                    <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
-                                </div>
-                                <div class="card-rating">
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star neutralStar" aria-hidden="true"></i>
-                                    <span class="sr-only">Note de 4 sur 5</span>
+
+                    <div class="contenu-bloc-populaires flex">
+
+                        <a class="populaire-card flex">
+                            <img class="populaire-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Image chambre hôtel verte">
+                            <div class="populaire-description">
+                                    <h3 class="populaire-titre">Auberge de la Canebière</h3>
+                                    <p class="populaire-prix">Nuit à partir de 25<span class="euro">€</span></p>
+                                <div class="notes-populaires">
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star greystar"></i>
                                 </div>
                             </div>
-                        </article>
-                        <article class="card">
-                            <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                            <div class="card-content">
-                                <div class="card-txt">
-                                    <h3 class="card-title">Hôtel Bleu et Blanc</h3>
-                                    <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
-                                </div>
-                                <div class="card-rating">
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star neutralStar" aria-hidden="true"></i>
-                                    <span class="sr-only">Note de 4 sur 5</span>
+                        </a>
+                        <a class="populaire-card flex">
+                            <img class="populaire-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Image chambre grise avec mezzanine">
+                            <div class="populaire-description">
+                                    <h3 class="populaire-titre">Chambres d'hôtes Au coeur de l'eau</h3>
+                                    <p class="populaire-prix">Nuit à partir de 71<span class="euro">€</span></p>
+                                <div class="notes-populaires">
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star greystar"></i>
                                 </div>
                             </div>
-                        </article>
+                        </a>
+                        <a class="populaire-card flex">
+                            <img class="populaire-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Image lit deux places marron">
+                            <div class="populaire-description">
+                                    <h3 class="populaire-titre">Hôtel Bleu et Blanc</h3>
+                                    <p class="populaire-prix">Nuit à partir de 66<span class="euro">€</span></p>
+                                <div class="notes-populaires">
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star greystar"></i>
+                                </div>
+                            </div>
+                        </a>
+
                     </div>
                 </section>
             </div>
