--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="hotel-card-description flex">
 
                             <h3 class="hotel-titre-card">Hôtel du Port</h3>
-                            <p class="hotel-prix">Nuit à partir de 52<span class="euro">€</span></p>
+                            <p class="hotel-prix flex">Nuit à partir de 52<span class="euro">€</span></p>
                             <div class="card-notes">
                                 <i class="fas fa-star bluestar"></i>
                                 <i class="fas fa-star bluestar"></i>
@@ -123,8 +123,54 @@
                             </div>
                         </div>
                     </a>
+                    <a class="hotel-card flex">
+                        <img class="hotel-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                        <div class="hotel-card-description flex">
+
+                            <h3 class="hotel-titre-card">Hôtel de la Mer</h3>
+                            <p class="hotel-prix flex">Nuit à partir de 46<span class="euro">€</span></p>
+                            <div class="card-notes">
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star greystar"></i>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a class="hotel-card flex">
+                        <img class="hotel-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                        <div class="hotel-card-description flex">
+
+                            <h3 class="hotel-titre-card">Auberge la Canebière</h3>
+                            <p class="hotel-prix flex">Nuit à partir de 25<span class="euro">€</span></p>
+                            <div class="card-notes">
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star greystar"></i>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="hotel-card flex">
+                        <img class="hotel-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                        <div class="hotel-card-description flex">
+
+                            <h3 class="hotel-titre-card">Auberge le Panier</h3>
+                            <p class="hotel-prix flex">Nuit à partir de 23<span class="euro">€</span></p>
+                            <div class="card-notes">
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star bluestar"></i>
+                                <i class="fas fa-star greystar"></i>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                <div class="more">
+                <div class="more flex">
                         <span><strong>Afficher plus</strong></span>
                     </a>
                 </div>
@@ -185,8 +231,77 @@
                     </div>
                 </section>
             </div>
+
+            <div id="activité-bloc" class="flex">
+                <h2 class="activité-titre" id="activité">Activités à Marseille</h2>
+                <div class="activitié-bloc-contenu flex">
+                    <div class="activité-contenu flex">
+                        <a class="activité-card flex">
+                            <img class="activité-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Image vieux port">
+                            <div class="activité-card-description flex">
+                                <h3 class="activité-titre-card">Vieux Port</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="activité-contenu flex">
+                        <a class="activité-card flex">
+                            <img class="activité-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Image vieux port">
+                            <div class="activité-card-description flex">
+                                <h3 class="activité-titre-card">Fort de Pomègues</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="activité-contenu flex">
+                        <a class="activité-card flex">
+                            <img class="activité-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Image vieux port">
+                            <div class="activité-card-description flex">
+                                <h3 class="activité-titre-card">Parc national des Calanques</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="activité-contenu flex">
+                        <a class="activité-card flex">
+                            <img class="activité-image" src="C:\Users\kallv\Documents\ProjetBookie\Asset\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Image vieux port">
+                            <div class="activité-card-description flex">
+                                <h3 class="activité-titre-card">Notre-Dame-de-la-Garde</h3>
+                            </div>
+                        </a>
+                    </div>
+            </div>
+        </div>
         </main>
-        <footer></footer>
+        <footer>
+        <div class="footer">
+            <div class="footer-nav">
+                <nav>
+                    <ul>
+                        <li class="strong">À propos</li>
+                        <li><a href="#">Fonctionement du site</a></li>
+                        <li><a href="#">Conditions générales de vente</a></li>
+                        <li><a href="#">Données et confidentialité</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer-nav" >
+                <nav>
+                    <ul>
+                        <li class="strong">Nos hébergements</li>
+                        <li><a href="#">Charte qualité</a></li>
+                        <li><a href="#">Soumettre votre hôtel</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer-nav" >
+                <nav>
+                    <ul>
+                        <li class="strong">Assistance</li>
+                        <li><a href="#">Centre d'aide</a></li>
+                        <li><a href="#">Nous contacter</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </footer>
     </div>
 </body>
 
