--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="main-container">
@@ -39,6 +40,7 @@
                     <input type="button" value="Rechercher" class="bouton">
                 </form>
             </div>
+
             <div class="box-filtres">
                 <div>
                     <span class="mot-filtre"> Filtre</span>
